src/objects/PSA_Expense_Stage__c.object
<CustomObject>
    <description>The PSA Expense Stage object will be accessed by the Accounting Application (Intacct) integration for updates needed to expense reports, including Reimbursement Status.</description>
    <fields>
        <fullName>PSA_Expense_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Id (record name) of the expense report to update (e.g., “ER-39843”). This is used for lookup of the expense report</description>
        <label>Expense Report</label>
        <referenceTo>pse__Expense_Report__c</referenceTo>
        <relationshipLabel>PSA Expense Stage</relationshipLabel>
        <relationshipName>PSA_Expense_Stage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_GW_Integration_Id__c</fullName>
        <description>Source Id used to uniquely identify the associated source system record</description>
        <label>GW Integration Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Processed_Date__c</fullName>
        <label>Processed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSA_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_Processing_Error_Message__c</fullName>
        <label>Processing Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PSA_Reimbursement_Status__c</fullName>
        <description>A Reimbursement Status value to set on the expense report. Valid values from the integration include: Reimbursed, Denied</description>
        <label>Reimbursement Status</label>
        <picklist>
            <picklistValues>
                <fullName>Reimbursed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PSA Expense Stage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PSA_Expense_Report__c</columns>
        <columns>PSA_Reimbursement_Status__c</columns>
        <columns>PSA_GW_Integration_Id__c</columns>
        <columns>PSA_Processed__c</columns>
        <columns>PSA_Processed_Date__c</columns>
        <columns>PSA_Processing_Error_Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ES-{00000}</displayFormat>
        <label>Expense Stage Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSA Expense Stage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>